--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.listFragment.ListFragment"
-    tools:listitem="@layout/fragment_list_item">
+    tools:listitem="@layout/fragment_list_item"
+    android:id="@+id/fragment_list_rv">
 
 </androidx.recyclerview.widget.RecyclerView>
