--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.fragment.app.FragmentContainerView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/map_view_fragment_map"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.mapFragment.MapFragment">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Map Fragment" />
-
-</FrameLayout>
+    android:name="com.google.android.gms.maps.SupportMapFragment"
+    tools:context=".ui.mapFragment.MapFragment"/>
