--- a/app/src/main/res/menu/details_activity_toolbar_menu.xml
+++ b/app/src/main/res/menu/details_activity_toolbar_menu.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/save_property"
-        android:title="@string/menu_save"
-        android:icon="@drawable/ic_save"
+    <item android:id="@+id/edit_property"
+        android:title="@string/edit"
+        android:icon="@drawable/ic_edit"
         app:showAsAction="collapseActionView|ifRoom">
     </item>
 </menu>
