--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -313,17 +313,14 @@
                 app:layout_constraintStart_toEndOf="@+id/fragment_detail_point_of_interest_iv"
                 app:layout_constraintTop_toTopOf="@+id/fragment_detail_point_of_interest_iv" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/fragment_detail_point_of_interest_rv"
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/fragment_detail_point_of_interest_cg"
                 android:layout_width="match_parent"
-                android:layout_height="65dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:orientation="horizontal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/fragment_detail_point_of_interest_iv"
-                tools:itemCount="1"
-                tools:listitem="@layout/fragment_details_point_of_interest_item" />
+                app:layout_constraintTop_toBottomOf="@id/fragment_detail_point_of_interest_iv" />
 
             <ImageView
                 android:id="@+id/fragment_detail_available_iv"
@@ -335,7 +332,7 @@
                 android:contentDescription="@string/available_since"
                 android:src="@drawable/ic_calendar"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/fragment_detail_point_of_interest_rv" />
+                app:layout_constraintTop_toBottomOf="@+id/fragment_detail_point_of_interest_cg" />
 
             <TextView
                 android:id="@+id/fragment_detail_available_title_tv"
