--- a/app/src/main/res/layout/activity_add_property.xml
+++ b/app/src/main/res/layout/activity_add_property.xml
@@ -20,7 +20,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/activity_add_property_sv"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -62,6 +63,7 @@
                 android:layout_height="wrap_content"
                 android:autofillHints="Price"
                 android:hint="@string/price"
+                style="@style/editText"
                 android:inputType="numberSigned|number"
                 app:layout_constraintBottom_toBottomOf="@+id/activity_add_property_price_symbol_tv"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -96,7 +98,9 @@
                 android:layout_height="wrap_content"
                 app:barrierDirection="bottom"
                 app:constraint_referenced_ids="activity_add_property_add_media_ib,
-                activity_add_property_medias_rv" />
+                activity_add_property_medias_rv"
+                tools:layout_editor_absoluteX="10dp"
+                tools:layout_editor_absoluteY="214dp" />
 
             <ImageView
                 android:id="@+id/activity_add_property_surface_iv"
@@ -111,6 +115,7 @@
 
             <EditText
                 android:id="@+id/activity_add_property_surface_et"
+                style="@style/editText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
@@ -151,6 +156,7 @@
                 android:layout_marginTop="15dp"
                 android:autofillHints="@string/surface"
                 android:hint="@string/number_of_rooms"
+                style="@style/editText"
                 android:inputType="numberSigned|number"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/activity_add_property_rooms_iv"
@@ -175,6 +181,7 @@
                 android:layout_marginTop="15dp"
                 android:autofillHints="@string/number_of_bathrooms"
                 android:hint="@string/number_of_bathrooms"
+                style="@style/editText"
                 android:inputType="numberSigned|number"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/activity_add_property_bathrooms_iv"
@@ -199,10 +206,38 @@
                 android:layout_marginTop="15dp"
                 android:autofillHints="@string/number_of_bedrooms"
                 android:hint="@string/number_of_bedrooms"
+                style="@style/editText"
                 android:inputType="numberSigned|number"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/activity_add_property_bedrooms_iv"
                 app:layout_constraintTop_toBottomOf="@+id/activity_add_property_bathrooms_et" />
+
+            <ImageView
+                android:id="@+id/activity_add_property_description_iv"
+                style="@style/detailIcon"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:contentDescription="@string/description"
+                android:src="@drawable/ic_pen"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/activity_add_property_description_et" />
+
+            <EditText
+                android:id="@+id/activity_add_property_description_et"
+                style="@style/editText"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:layout_marginStart="15dp"
+                android:autofillHints="@string/number_of_bedrooms"
+                android:fontFamily="@font/roboto"
+                android:gravity="bottom"
+                android:hint="@string/description"
+                android:inputType="textMultiLine|textAutoCorrect"
+                android:singleLine="false"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/activity_add_property_description_iv"
+                app:layout_constraintTop_toBottomOf="@+id/activity_add_property_bedrooms_et" />
 
             <ImageView
                 android:id="@+id/activity_add_property_address_iv"
@@ -219,14 +254,16 @@
                 android:id="@+id/activity_add_property_address_line1_et"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
                 android:layout_marginTop="15dp"
+                android:layout_marginStart="15dp"
                 android:autofillHints="@string/address_line_1"
                 android:hint="@string/address_line_1"
                 android:inputType="text"
+                style="@style/editText"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/activity_add_property_address_iv"
-                app:layout_constraintTop_toBottomOf="@+id/activity_add_property_bedrooms_et"/>
+                app:layout_constraintTop_toBottomOf="@+id/activity_add_property_description_et" />
 
             <EditText
                 android:id="@+id/activity_add_property_address_line2_et"
@@ -234,8 +271,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
                 android:autofillHints="@string/address_line_2"
-                android:hint="@string/address_line_2"
+                android:hint="@string/address_line_2_optional"
                 android:inputType="text"
+                style="@style/editText"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/activity_add_property_address_iv"
                 app:layout_constraintTop_toBottomOf="@+id/activity_add_property_address_line1_et" />
@@ -249,9 +287,11 @@
                 android:autofillHints="@string/city"
                 android:hint="@string/city"
                 android:inputType="text"
+                style="@style/editText"
                 app:layout_constraintEnd_toStartOf="@+id/activity_add_property_address_postal_code_et"
                 app:layout_constraintStart_toEndOf="@+id/activity_add_property_address_iv"
                 app:layout_constraintTop_toBottomOf="@+id/activity_add_property_address_line2_et" />
+
 
             <EditText
                 android:id="@+id/activity_add_property_address_postal_code_et"
@@ -260,6 +300,7 @@
                 android:autofillHints="@string/postal_code"
                 android:hint="@string/postal_code"
                 android:inputType="text"
+                style="@style/editText"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/activity_add_property_address_line2_et" />
 
@@ -271,6 +312,7 @@
                 android:autofillHints="@string/country"
                 android:hint="@string/country"
                 android:inputType="text"
+                style="@style/editText"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/activity_add_property_address_iv"
                 app:layout_constraintTop_toBottomOf="@+id/activity_add_property_address_postal_code_et" />
@@ -327,6 +369,7 @@
                 android:autofillHints="@string/real_estate_agent"
                 android:hint="@string/real_estate_agent"
                 android:inputType="text"
+                style="@style/editText"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/activity_add_property_agent_iv"
                 app:layout_constraintTop_toBottomOf="@+id/activity_add_property_point_of_interest_cg"/>
@@ -337,10 +380,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:text="@string/save"
+                android:enabled="false"
                 app:layout_constraintTop_toBottomOf="@id/activity_add_property_agent_et"
                 app:backgroundTint="@color/colorAccent"
                 />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 </LinearLayout>
