--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,6 +33,10 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="editText">
+        <item name="fontFamily">@font/roboto</item>
+    </style>
+
     <style name="pointsOfInterestChip" parent="@style/Widget.MaterialComponents.Chip.Filter">
         <item name="chipBackgroundColor">@color/background_color_chip_points_of_interest</item>
     </style>
