--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.list.list.ListFragment">
+    tools:context=".ui.list.ListFragment">
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/fragment_list_rv"
         android:layout_width="match_parent"
