--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- fragment_list_item -->
-    <dimen name="fragment_list_item_type_tv_text_size">18sp</dimen>
+    <dimen name="text_size">18sp</dimen>
+
+    <!-- fragment_add_property -->
+    <dimen name="fragment_add_property_padding">8dp</dimen>
+    <dimen name="fragment_add_property_spacing">16dp</dimen>
+    <dimen name="fragment_add_property_image_size">30dp</dimen>
+    <dimen name="fragment_add_property_media_container_size">104dp</dimen>
+    <dimen name="fragment_add_property_media_size">100dp</dimen>
+    <dimen name="fragment_add_property_media_padding">2dp</dimen>
+    <dimen name="fragment_add_property_postal_code_width">150dp</dimen>
+
 </resources>
