Add check button to save image + debug preview when resume

--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -8,7 +8,7 @@
     <FrameLayout
         android:id="@+id/activity_camera_fl"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
     <ImageButton
         android:id="@+id/activity_camera_capture_btn"
@@ -17,7 +17,7 @@
         android:layout_margin="5dp"
         android:layout_gravity="bottom|center_horizontal"
         android:scaleType="fitCenter"
-        android:background="@drawable/ic_shutter"
+        android:background="@drawable/ic_shutter_normal"
         android:contentDescription="@string/capture"
         />
 
@@ -31,4 +31,30 @@
         android:background="@drawable/ic_picture"
         android:contentDescription="@string/gallery"
         />
+
+    <ImageButton
+        android:id="@+id/activity_camera_cancel_btn"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_margin="20dp"
+        android:layout_gravity="top|end"
+        android:scaleType="fitCenter"
+        android:background="@drawable/ic_cancel"
+        android:contentDescription="@string/cancel"
+        android:visibility="gone"
+        />
+
+    <ImageButton
+        android:id="@+id/activity_camera_check_btn"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_margin="20dp"
+        android:layout_gravity="bottom|center_horizontal"
+        android:scaleType="fitCenter"
+        android:background="@drawable/ic_check"
+        android:contentDescription="@string/check"
+        android:visibility="gone"
+        />
+
+
 </FrameLayout>
