--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -84,18 +84,6 @@
         />
 
     <ImageButton
-        android:id="@+id/activity_camera_cancel_btn"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_margin="25dp"
-        android:layout_gravity="top|start"
-        android:scaleType="fitCenter"
-        android:background="@drawable/ic_cancel"
-        android:contentDescription="@string/cancel"
-        android:visibility="gone"
-        />
-
-    <ImageButton
         android:id="@+id/activity_camera_check_btn"
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -106,5 +94,22 @@
         android:contentDescription="@string/check"
         android:visibility="gone"
         />
+
+    <EditText
+        android:id="@+id/activity_camera_description_et"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_gravity="bottom"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginBottom="70dp"
+        android:autofillHints="@string/add_description"
+        android:background="@drawable/edit_text_shape"
+        android:gravity="center"
+        android:hint="@string/add_description"
+        android:imeOptions="actionSend"
+        android:inputType="textAutoComplete"
+        android:textColor="@color/light_grey"
+        android:textColorHint="@color/grey"
+        android:visibility="gone" />
 
 </FrameLayout>
