--- a/app/src/main/res/color/background_color_chip_points_of_interest.xml
+++ b/app/src/main/res/color/background_color_chip_points_of_interest.xml
@@ -3,5 +3,5 @@
     <item
         android:color="@color/colorAccent"
         android:state_checked="true"/>
-    <item android:color="@color/lightGrey"/>
+    <item android:color="@color/very_light_Grey"/>
 </selector>
