--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -107,7 +107,7 @@
         android:gravity="center"
         android:hint="@string/add_description"
         android:imeOptions="actionSend"
-        android:inputType="textAutoComplete"
+        android:inputType="textAutoComplete|textCapSentences"
         android:textColor="@color/light_grey"
         android:textColorHint="@color/grey"
         android:visibility="gone" />
