--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -39,6 +39,14 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="mediaViewerText">
+        <item name="android:background">@color/blackTransparent</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">30sp</item>
+    </style>
+
     <style name="editText" parent="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="fontFamily">@font/roboto</item>
         <item name="boxStrokeColor">@color/colorAccent</item>
