--- a/app/src/main/res/layout/fragment_details_media_item.xml
+++ b/app/src/main/res/layout/fragment_details_media_item.xml
@@ -14,6 +14,15 @@
         android:contentDescription="@string/media"
         tools:srcCompat="@sample/properties" />
 
+    <ImageView
+        android:id="@+id/fragment_detail_video_iv"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="5dp"
+        android:src="@drawable/ic_video"
+        android:visibility="gone"
+        android:contentDescription="@string/media" />
+
     <TextView
         android:id="@+id/fragment_detail_media_item_tv"
         style="@style/detailMediaText"
